升级烟花模块汉化

--- a/conf/mod_customserver.conf.dist
+++ b/conf/mod_customserver.conf.dist
@@ -3,12 +3,12 @@
 ###################################################################################################
 #	CUSTOM SERVER
 ###################################################################################################
-# Announce the module when the player logs in?
+#当玩家登录时宣布模块?
 
 CustomServer.Announce = 1
 
-# Fireworks go off when the player levels up at specific intervals
-# Intervals: 5, 10, 20, 30, 40, 50, 60, 70, 80
-# Enable the module? (1: true | 0: false)
+# 当玩家在特定的时间间隔内升级时，烟花便会响起
+# 间隔:5, 10, 15, 20, 30, 40, 50, 60, 70, 80
+# 启用这个模块吗? (1: true | 0: false)
 
 CustomServer.FireworkLevels = 1
